# free-market

./: .gitignore  Cargo.toml  Dockerfile  ISSUES  PLAN.md  README.md  README_EN.md  build-ci.sh  build.rs  build.sh  config.example.toml  docker-compose.yml
.github/workflows/: build-release.yml
assets/luna/: main.css  main.js
deploy/: dujiao-rust.service  free-market.service
docs/: README.md
locales/: en-US.toml  zh-CN.toml
migrations/: 0012_evm_local_payments.sql  0013_evm_local_alchemy.sql
schema/: 0001_core.sql  0002_catalog.sql  0003_order_payment_fulfillment.sql  0004_jobs_notifications.sql  0005_admin_sessions.sql  0006_admin_rbac_notifications.sql  0007_plan39_compat_ops.sql  0008_state_machine_v2.sql  0009_orders_soft_delete.sql  0010_purchase_rate.sql  0011_admin_refresh_tokens.sql  0014_evm_local_network_env.sql
src/: app.rs  build_info.rs  config.rs  error.rs  lib.rs  main.rs  money.rs  state.rs  time.rs
src/cli/: mod.rs
src/db/: migrate.rs  mod.rs  schema.rs  sqlite.rs
src/import/: mod.rs
src/jobs/: worker.rs
src/mail/: mod.rs
src/models/: catalog.rs  job.rs  mod.rs  order.rs  payment.rs
src/notification/: mod.rs
src/payment/: mod.rs  provider.rs  providers.rs  registry.rs
src/repositories/: mod.rs
src/security/: csrf.rs  jwt.rs  mod.rs  net.rs  password.rs  secrets.rs  session.rs
src/services/: admin_service.rs  api_hook_service.rs  backup_service.rs  bootstrap.rs  captcha_service.rs  catalog_service.rs  evm_local_service.rs  fulfillment_service.rs  i18n_service.rs  mod.rs  order_service.rs  payment_service.rs  pricing_service.rs  settings_service.rs  (+1 more)
tests/: frontend_routes.rs  i18n.rs  order_flow.rs
web-admin/: .env  .env.prod  .env.test  LICENSE  README.md  index.html  package.json
(+102 files in other folders)
