[package]
name = "free-market"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[build-dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[dependencies]
anyhow = "1"
aes-gcm = "0.10"
clap = { version = "4", features = ["derive"] }
rpassword = "7"
argon2 = "0.5"
async-trait = "0.1"
axum = { version = "0.7", features = ["macros", "multipart"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
flate2 = "1"
hmac = "0.12"
jsonwebtoken = "9"
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "tokio1", "tokio1-native-tls"] }
md5 = "0.7"
mime_guess = "2"
minijinja = { version = "2", features = ["loader", "json"] }
pulldown-cmark = { version = "0.10", default-features = false, features = ["html"] }
rand = "0.8"
qrcode = "0.14"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rsa = "0.9"
rust-embed = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = { version = "0.10", features = ["oid"] }
signature = "2"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "json"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tower-http = { version = "0.6", features = ["trace", "limit"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }

[profile.release]
lto = "thin"
strip = "symbols"
codegen-units = 1
opt-level = 3
panic = "abort"
